state-chain/custom-rpc/src/snapshots/custom_rpc__tests__vault_swap_details_serialization.snap
---
source: state-chain/custom-rpc/src/tests.rs
expression: btc
---
{
  "chain": "Bitcoin",
  "nulldata_payload": "0x00010203",
  "deposit_address": "1Pc9wMdCRguVVrZ9Paz8MSgUd47cYfyeQH"
}
