state-chain/custom-rpc/src/snapshots/custom_rpc__tests__vault_swap_input_serialization-4.snap
---
source: state-chain/custom-rpc/src/tests.rs
expression: sol
---
{
  "source_asset": {
    "chain": "Solana",
    "asset": "SOL"
  },
  "destination_asset": {
    "chain": "Solana",
    "asset": "USDC"
  },
  "destination_address": "8RMUMRxniKbs9kMDVb81RtWoLNz2zesz3JQLRZXZc5kh",
  "broker_commission": 100,
  "extra_parameters": {
    "chain": "Solana",
    "from": "1Pc9wMdCRguVVrZ9Paz8MSgUd47cYfyeQH",
    "seed": "f1f1f1f1f1f1f1f1f1f1f1f1f1f1f1f1f1f1f1f1f1f1f1f1f1f1f1f1f1f1f1f1",
    "input_amount": 1000000,
    "refund_parameters": {
      "retry_duration": 1000,
      "refund_address": "E2aBDC008BaEa1d4Dd2eeE4f0BEa61f6f91897cC",
      "min_price": "0x4d2",
      "refund_ccm_metadata": {
        "message": "7c1d0f07",
        "gas_budget": "0x0",
        "ccm_additional_data": "011010101010101010101010101010101010101010101010101010101010101010010411111111111111111111111111111111111111111111111111111111111111110012121212121212121212121212121212121212121212121212121212121212120813131313131313131313131313131313131313131313131313131313131313131414141414141414141414141414141414141414141414141414141414141414"
      }
    },
    "from_token_account": "8RMUMRxniKbs9kMDVb81RtWoLNz2zesz3JQLRZXZc5kh"
  },
  "channel_metadata": {
    "message": "7c1d0f07",
    "gas_budget": "0x0",
    "ccm_additional_data": "011010101010101010101010101010101010101010101010101010101010101010010411111111111111111111111111111111111111111111111111111111111111110012121212121212121212121212121212121212121212121212121212121212120813131313131313131313131313131313131313131313131313131313131313131414141414141414141414141414141414141414141414141414141414141414"
  },
  "boost_fee": 100,
  "affiliate_fees": [
    {
      "account": "5C62Ck4UrFPiBtoCmeSrgF7x9yv9mn38446dhCpsi2mLHiFT",
      "bps": 100
    }
  ],
  "dca_parameters": {
    "number_of_chunks": 100,
    "chunk_interval": 10
  }
}
