state-chain/custom-rpc/src/snapshots/custom_rpc__tests__withdrawal_whitelist_serialization.snap
---
source: state-chain/custom-rpc/src/tests.rs
expression: val
---
{
  "active": {
    "timelock_secs": 86400,
    "allowed": [
      {
        "ExternalAddress": {
          "chain": "Ethereum",
          "address": "0xcfcfcfcfcfcfcfcfcfcfcfcfcfcfcfcfcfcfcfcf"
        }
      },
      {
        "InternalAccount": "5C62Ck4UrFPiBtoCmeSrgF7x9yv9mn38446dhCpsi2mLHiFT"
      }
    ]
  },
  "pending": [
    {
      "activates_at": 1700000000,
      "update": {
        "Allow": {
          "ExternalAddress": {
            "chain": "Bitcoin",
            "address": "bc1qxyz"
          }
        }
      }
    },
    {
      "activates_at": 1700086400,
      "update": {
        "Remove": {
          "InternalAccount": "5C7LYpP2ZH3tpKbvVvwiVe54AapxErdPBbvkYhe6y9ZBkqWt"
        }
      }
    },
    {
      "activates_at": 1700172800,
      "update": {
        "Timelock": 0
      }
    }
  ]
}
